fix background color of header (bug 43242)
on Windows based phones where gradient doesn't work we get a horrible
black color making text unreadable. This fixes situation..

--- a/stylesheets/less/specials/mf-login.less
+++ b/stylesheets/less/specials/mf-login.less
@@ -9,7 +9,6 @@
 
 	#mw-mf-overlay {
 		.header {
-			background-color: @chromeHeaderColor;
 			h1 {
 				padding-left: @overlayHeadingIndent;
 			}
